--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -223,7 +223,7 @@
 							<button onclick="window.location='/firsatlar?enyakindakisaticilar=1'" type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-bell"></span>
 								<p>
-									En Yakındaki Satıcılar
+									Kendi Üniversitemdekiler
 								</p>
 							</button>
 						</div>
