--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -86,7 +86,7 @@
 						Güvenilir Satıcılar</span></a>
 				</li>
 				<li class='last'>
-					<a href='/firsatlar?enyakindakisaticilar=1'><span>En Yakında
+					<a href='/firsatlar?kendiuniversitemdekiler=1'><span>En Yakında
 						Olan Satıcılar</span></a>
 				</li>
 			</ul>
