--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -283,7 +283,7 @@
 							</div>
 
 							<div class="panel-body">
-								<a href="/firsatlar?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
+								<a href="/firsatlar?enyakindakisaticilar=1">Kendi Üniversitemdekiler</a>
 
 							</div>
 
@@ -603,7 +603,7 @@
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
+							<a href="/firsatlar/?enyakindakisaticilar=1">Kendi Üniversitemdekiler</a>
 
 						</div>
 
@@ -711,7 +711,7 @@
 						</div>
 
 						<div class="panel-body">
-							<a href="/firsatlar/?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
+							<a href="/firsatlar/?enyakindakisaticilar=1">Kendi Üniversitemdekiler</a>
 
 						</div>
 
@@ -1225,7 +1225,7 @@
 
 						<div class="panel-heading">
 							<h3 style="text-align: center;" class="panel-title">Kategoriye
-							Göre En Güvenilir veya En Yakında olan satıcıları bul!!</h3>
+							Göre En Güvenilir veya kendi üniversitendeki satıcıları bul!!</h3>
 						</div>
 
 						<div class="panel-body">
@@ -1244,7 +1244,7 @@
 										</li>
 										<li>
 											<a href="#enyakindaolansaticilar" tabindex="-1"
-											data-toggle="tab">En Yakında Olan Satıcılar</a>
+											data-toggle="tab">Kendi Üniversitemdekiler</a>
 										</li>
 									</ul>
 								</li>
@@ -1261,7 +1261,7 @@
 										</li>
 										<li>
 											<a href="#enyakindaolanevarkadaslari" tabindex="-1"
-											data-toggle="tab">En Yakında Olanlar</a>
+											data-toggle="tab">Kendi Üniversitemdekiler</a>
 										</li>
 									</ul>
 								</li>
@@ -1279,7 +1279,7 @@
 										</li>
 										<li>
 											<a href="#enyakindaolanozelders" tabindex="-1"
-											data-toggle="tab">En Yakında Olanlar</a>
+											data-toggle="tab">Kendi Üniversitemdekiler</a>
 										</li>
 									</ul>
 								</li>
