--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -17,12 +17,10 @@
 			<li><a href="/kategoriler">Üniversiteler</a>
 				
 				<ul>
-					<% Advert.group(:user_id).count.first(5) %>
-					<li><a href="/kategoriler/ikincielilan">İkinci El İlan</a></li>
 					
-					<li><a href="/kategoriler/evarkadasi">Ev Arkadaşı</a></li>
-					<li><a href="/kategoriler/ozelders">Özel Ders</a></li>
-					
+					<% topUniversities.each do |record| %>
+					<li><a href="/kategoriler/ikincielilan"><%= record['name'] + " (" + record['count'] + ")" %></a></li>
+					<% end %>
 				</ul>
 				
 			</li>
